--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,39 @@
-<div class="wrapper">
-  <div class="card"
-       vm-draggable
+<div class="wrapper" style="display: flex">
+    <ul>
+        <li *ngFor="let card of availableCards">
+            <div class="card"
+                 dd-draggable-list-item
+                 [dd-type]="card.type"
+                 [dd-data]="card">
+                {{card.title}}
+            </div>
+        </li>
+    </ul>
 
-       (vm-draggable-dragstart)="draggableOptions.dragstart($event)"
-       (vm-draggable-dragend)="draggableOptions.dragend($event)"
+    <ul class="drop-zone droppable-list"
+        vm-droppable-list
+        (dd-dropped)="onDropLeft($event)"
+        [dd-allowed-types]="allowedTypes">
 
-       [vm-draggable-effect]="draggableOptions.effect"
-       [vm-draggable-disabled]="draggableOptions.disabled">
-    Draggable div
-  </div>
-  <div class="card drop-zone"
-       vm-droppable
+        <li *ngFor="let card of left"
+            dd-draggable-list-item
+            [dd-type]="card.type"
+            [dd-data]="card">
+            {{card.title}}
+        </li>
+    </ul>
 
-       (vm-droppable-dragover)="draggableOptions.dragover($event)"
-       (vm-droppable-drop)="draggableOptions.drop($event)"
+    <ul class="drop-zone droppable-list"
+        vm-droppable-list
+        (dd-dropped)="onDropRight($event)"
+        [dd-allowed-types]="allowedTypes">
 
-       [vm-droppable-hoverclass]="draggableOptions.hoverClass">
-    DROP TO ME
-  </div>
+        <li *ngFor="let card of right"
+            dd-draggable-list-item
+            [dd-type]="card.type"
+            [dd-data]="card">
+            {{card.title}}
+        </li>
+    </ul>
+
 </div>
