Add check for unknown transfer data drop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,7 @@
   </ul>
 
   <ul
-    dd-droppable-list
-    (dd-dropped)="onParentDrop($event)"
+    [dd-droppable-list]="parentCards"
     class="drop-zone droppable-list">
 
     <li *ngFor="let card of parentCards">
